--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -787,7 +787,7 @@ Your friends at Kompisbyrån
                 <source>page.about.well1</source>
                 <target>
                     <![CDATA[
-                        <h4>Vi som jobbar med Kompisbyrån</h4>
+                        <h4>نحن كعاملين في كومبيس بيرون</h4>
                         <p>
                              Emma Hammar, grundare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
                             Cecilia Holmgren, grundare
@@ -814,19 +814,19 @@ Your friends at Kompisbyrån
                 <target>
                     <![CDATA[
                         <p>
-                            Frågor om matchningen?<br>
-                            Göteborg: <a href="mailto:goteborg@kompisbyran.se">goteborg@kompisbyran.se</a><br>
-                            Jönköping: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
-                            Linköping: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
-                            Malmö: <a href="mailto:malmo@kompisbyran.se">malmo@kompisbyran.se</a><br>
-                            Stockholm: <a href="mailto:stockholm@kompisbyran.se">stockholm@kompisbyran.se</a><br>
-                            Umeå: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
-                            Uppsala: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
-                            Örebro: <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>
+                            أسئلة عن المطابقة<br>
+                            يوتوبوري <a href="mailto:goteborg@kompisbyran.se">goteborg@kompisbyran.se</a><br>
+                            يونشوبينغ <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
+                            لينشوبينغ <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
+                            مالمو <a href="mailto:malmo@kompisbyran.se">malmo@kompisbyran.se</a><br>
+                            ستوكهولم <a href="mailto:stockholm@kompisbyran.se">stockholm@kompisbyran.se</a><br>
+                            أوميو <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
+                            أوبسالا <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
+                            أوريبرو <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>
 
-                            Övrigt: <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br>
+                            متنوع <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br>
 
-                            Frågor om samarbete, rekrytering eller press: kontakta <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> eller <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a>
+                            أسئلة عن العمل المشترك,التجنيد ز الصحافة تواصل مع <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> eller <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a>
                         </p>
                     ]]>
                 </target>
