--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -92,11 +92,11 @@
             </trans-unit>
             <trans-unit id="homepage.cta.header">
                 <source>homepage.cta.header</source>
-                <target>في  نتدرب على اللغة السويدية و نلتقي في فيكا</target>
+                <target>في كومبيس بيرون  نتدرب على اللغة السويدية و نلتقي في فيكا</target> 
             </trans-unit>
             <trans-unit id="homepage.cta.header.strong">
                 <source>homepage.cta.header.strong</source>
-                <target>هل تريد أن تكون مع ؟</target>
+                <target>هل تريد أن تكون معنا ؟</target>
             </trans-unit>
             <trans-unit id="homepage.cta.message">
                 <source>homepage.cta.message</source>
@@ -656,16 +656,16 @@ Your friends at Kompisbyrån
                 <target>
                     <![CDATA[
                         <p>
-                            نحن نساعد على خلق اتصال بين المقيمين حديثا في السويد و السويديين أو القدامى *في السويد من الذين لديهم اهتمامات مشتركة فيما بينهم. حوالي ساعة من الوقت تقضونها سويا هذا هو ما ندعوه ب فيكا.هنا يمكنك الاختيار بين أن تكون رفيق فيكا* أو رفيق موسيقى ,وأنتم تعرفون مسبقا أنه يوجد قواسم مشتركة بينكما تستطيعان بدء الحديث بها. إذا شعرتم أن الأمور على ما يرام فيمكنكم لطفا أن تقوموا بذلك باتفاق خاص بينكما, و إلا فلا داعي لاعادة المحاولة... إنه قراركم.
+                            نحن نساعد على خلق اتصال بين المقيمين حديثا في السويد و السويديين أو القدامى *في السويد من الذين لديهم اهتمامات مشتركة فيما بينهم. حوالي ساعة من الوقت تقضونها سويا هذا هو ما ندعوه ب رفيق فيكا.هنا يمكنك الاختيار بين أن تكون رفيق فيكا* أو رفيق موسيقى ,وأنتم تعرفون مسبقا أنه يوجد قواسم مشتركة بينكما تستطيعان بدء الحديث بها. إذا شعرتم أن الأمور على ما يرام فيمكنكم لطفا أن تقوموا بذلك باتفاق خاص بينكما, و إلا فلا داعي لاعادة المحاولة... إنه قراركم.
                         </p>
                         <p>
                             أنت هو الشخص المعني بتعريف نفسه كقديم أو جديد في السويد بغض النطر عن طول أو قصر المدة التي قضينتها فعلا هنا. هل تريد ان تتعلم السويدية أو انك قادر على تعليمها و التواصل بها. من المهم أن تكون هذه المعلومات واضحة في طلبك و في تقديمك لنفسك.
                         </p>
                         <p>
-                            ...حسنا زز هذا ما عليك فعله
+                            ...حسنا هذا هذا ما عليك فعله
                         </p>
                         <p>
-                            1. ابدأ بفتح حساب: اضغط على زر (أكون رفيق فيكا) و اتبع التعليمات. هذ الامر مجاني... يجب ان تكون قادرا على اللقاء في أحد المدن التالية: يوتوبوري, يونشوبينغ, لينشوبينغ,مالمو ستوكهولم, أوميو أوبسالا, فيستروس و أوربرو.
+                            .ابدأ بفتح حساب: اضغط على زر (أكون رفيق فيكا) و اتبع التعليمات. هذ الامر مجاني... يجب ان تكون قادرا على اللقاء في أحد المدن التالية: يوتوبوري, يونشوبينغ, لينشوبينغ,مالمو ستوكهولم, أوميو أوبسالا, فيستروس و أوربرو.
                         </p>
                         <p>
                             2. التطابق : عند الوصول لاهتمامات مشتركة بين شخصين يتم ارسال بريد الكتروني لكلا الطرفين.
