--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -668,13 +668,13 @@ Your friends at Kompisbyrån
                             .ابدأ بفتح حساب: اضغط على زر (أكون رفيق فيكا) و اتبع التعليمات. هذ الامر مجاني... يجب ان تكون قادرا على اللقاء في أحد المدن التالية: يوتوبوري, يونشوبينغ, لينشوبينغ,مالمو ستوكهولم, أوميو أوبسالا, فيستروس و أوربرو.
                         </p>
                         <p>
-                            2. التطابق : عند الوصول لاهتمامات مشتركة بين شخصين يتم ارسال بريد الكتروني لكلا الطرفين.
+                            .التطابق : عند الوصول لاهتمامات مشتركة بين شخصين يتم ارسال بريد الكتروني لكلا الطرفين.
                         </p>
                         <p>
-                            3. قرر موعدا و قم بإرسال بريد الكتروني للطرف الاخر لتأكيد الموعد.
+                            .قرر موعدا و قم بإرسال بريد الكتروني للطرف الاخر لتأكيد الموعد.
                         </p>
                         <p>
-                            4. الموعد عادة جلسة لتناول القهوة و تبادل الحديث باللغة السويدية لمدة ساعة تقريبا.
+                            .الموعد عادة جلسة لتناول القهوة و تبادل الحديث باللغة السويدية لمدة ساعة تقريبا.
                         </p>
                     ]]>
                 </target>
@@ -693,7 +693,7 @@ Your friends at Kompisbyrån
                 <source>page.work_with_us.text</source>
                 <target>
                     <![CDATA[
-                        <h3>Stöd oss!</h3>
+                        <h3>ادعمنا</h3>
                         <p>
                              هل تريد كشخص أو كشركة او كبلدية  أو منظمة أن تقوم بعمل مشترك معنا؟  اليوم هناك الالاف من الأصدقاء من 126 منطقة قد تعرفوا على بعضهم البعض من خلالنا, الكثير من اللقاءات قد أدت إلى الدخول في سوق العمل و أخرى إلى مكان سكن و الاهم من ذلك الصداقات التي تجمع مناطق, ثقافات ,أعمار, و الخبرات المختلفة.
                         </p>
@@ -801,7 +801,7 @@ Your friends at Kompisbyrån
 
                             متنوع <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br>
 
-                            أسئلة عن العمل المشترك,التجنيد ز الصحافة تواصل مع <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> eller <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a>
+                            أسئلة عن العمل المشترك,التجنيد ز الصحافة تواصل مع <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> أو <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a>
                         </p>
                     ]]>
                 </target>
