--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -223,7 +223,7 @@
             </trans-unit>
             <trans-unit id="register.login.intro">
                 <source>register.login.intro</source>
-                <target>إذا كان لديك حساب مسبقا فيمكنك تسجيل الدخول بكتابة البريد الالكتروني و كلمة السر. إذا كانت هذه هي المرة الاولى اضغط هنا.</target>
+                <target>إذا كان لديك حساب مسبقا فيمكنك تسجيل الدخول بكتابة البريد الالكتروني و كلمة السر. إذا كانت هذه هي المرة الاولى اضغط هنا</target>
             </trans-unit>
             <trans-unit id="login.form.email">
                 <source>login.form.email</source>
@@ -287,11 +287,11 @@
             </trans-unit>
             <trans-unit id="user.form.about">
                 <source>user.form.about</source>
-                <target> تحدث عن نفسك. اذا كنت تريد  أن تكون رفيق موسيقى تحدث عن اهتماماتك الموسيقية</target>
+                <target> تحدث عن نفسك. اذا كنت تريد  أن تكون رفيق موسيقى أضف اهتماماتك الموسيقية</target>
             </trans-unit>
             <trans-unit id="user.form.about.help">
                 <source>user.form.about.help</source>
-                <target>كمثال.... ماذا تحب أن تفعل؟ من أنت كشخص؟ الدراسة او العمل؟ ما المدة التي قضيتها في السويد؟ أما صديق الموسيقى فتحدث عن الالة التي تعزفها و الموسيقى التي تحبها.</target>
+                <target>.كمثال.... ماذا تحب أن تفعل؟ من أنت كشخص؟ الدراسة او العمل؟ ما المدة التي قضيتها في السويد؟ أما صديق الموسيقى فتحدث عن الالة التي تعزفها و الموسيقى التي تحبها.اكتب حصرا باللغة السويدية أو الانكليزية</target>
             </trans-unit>
             <trans-unit id="user.form.from">
                 <source>user.form.from</source>
@@ -299,11 +299,11 @@
             </trans-unit>
             <trans-unit id="user.form.city">
                 <source>user.form.city</source>
-                <target>أنا يمكنني اللقاء في (مدينة)</target>
+                <target>أنا يمكنني اللقاء في مدينة</target>
             </trans-unit>
             <trans-unit id="user.form.municipality">
                 <source>user.form.municipality</source>
-                <target>أنا أعيش في (بلدية)</target>
+                <target>أنا أعيش في بلدية</target>
             </trans-unit>
             <trans-unit id="user.form.district">
                 <source>user.form.district</source>
@@ -340,14 +340,14 @@
             <trans-unit id="user.settings.intro">
                 <source>user.settings.intro</source>
                 <target><![CDATA[
-                    <p>هنا تجيب عن أسئلة تتعلق بك كشخص :كلما توسعت بالحديث عن نفسك أكثر كلما كانت الفرصة اكبر لكي نجد لك نطابق افضل, نحن نحاول إيجاد التطابق بين أشخاص ذوي أهداف متطابقة أو متكاملة ,إذا كان لديكم هدف مشترك تحاولون تحقيقه لطفا اجعل هذا واضحت في تعريفك بنفسك و نحن بدورنا سوف نرى إن كنا نستطبع استيعان ذلك و الاستفادة منه.
-                    يجب ان تكون قادرا على اللقاء في أحد المدن التسعة التالية: يوتوبوري, يونشوبينغ, لينشوبينغ,مالمو ستوكهولم, أوميو أوبسالا, فيستروس و أوربرو.</p><br />
+                    <p>هنا تجيب عن أسئلة تتعلق بك كشخص :كلما توسعت بالحديث عن نفسك أكثر كلما كانت الفرصة اكبر لكي نجد لك نطابق افضل, نحن نحاول إيجاد التطابق بين أشخاص ذوي أهداف متطابقة أو متكاملة ,إذا كان لديكم هدف مشترك تحاولون تحقيقه لطفا اجعل هذا واضحا في تعريفك بنفسك و نحن بدورنا سوف نرى إن كنا نستطبع استيعاب ذلك و الاستفادة منه.
+                    .يجب ان تكون قادرا على اللقاء في أحد المدن التسعة التالية: يوتوبوري, يونشوبينغ, لينشوبينغ,مالمو, ستوكهولم, أوميو, أوبسالا, فيستروس و أوربرو.</p><br />
 
                     <p>يمكنك أن تكون رفيق فيكا أو رفيق موسيقا</p>
                     <ul>
-                        <li>رفيق فيكا: تتم المطابقة على أساس الاهتمامات المشتركة بين الطرفين ثم تلتقيان في مكان ما لجلسة فيكا حوالي ساعة من الوقت.
+                        <li>رفيق فيكا: تتم المطابقة على أساس الاهتمامات المشتركة بين الطرفين ثم تلتقيان في مكان ما لجلسة فيكا حوالي ساعة من الوقت
 
-                        <li>رفيق موسيقا: تتم المطابقة  مع شخص لديه اهتمامات موسيقية ثم تلتقيان في مكان عام لتبادل الاهتمامات الموسيقية, مثلا الذهاب الى حفلة سويا او اللقاء للعزف سويا على الة موسيقية.</ul>
+                        <li>رفيق موسيقا: تتم المطابقة  مع شخص لديه اهتمامات موسيقية ثم تلتقيان في مكان عام لتبادل الاهتمامات الموسيقية, مثلا الذهاب الى حفلة سويا او اللقاء للعزف سويا على الة موسيقية</ul>
                     ]]>
                 </target>
             </trans-unit>
@@ -422,7 +422,7 @@
                             يجب ان تكون قادرا على اللقاء في أحد المدن التالية: يوتوبوري, يونشوبينغ, لينشوبينغ,مالمو ستوكهولم, أوميو أوبسالا, فيستروس و أوربرو. نحن نأمل أن نستطيع أن نربط أصدقا جدد في مناطق جديدة في المستقبل.
                         </li>
                         <li>
-                            مسؤولية Kompisbyrån محصورة بفتح اتصال بين القدامى و الجدد في السويد.
+                            مسؤولية كومبيس بيرون محصورة بفتح اتصال بين القدامى و الجدد في السويد.
                         </li>
                         <li>
                             نقطة البداية هي جلسة فيكا أو جلسة موسيقى مع الشخص الذي تمت معه المطابقة فإذا سارت الامور على ما يرام يمكنكم الاتفاق بانفسكم على لقاء جديد وإذا أردتم لقاء صديق جديد ما عليكم إلا تسجيل الدخول و التقدك بطلب جديد.
