--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -245,6 +245,14 @@
                 <source>login.forgot_password</source>
                 <target>Glömt lösenordet?</target>
             </trans-unit>
+            <trans-unit id="login.text">
+                <source>login.text</source>
+                <target>
+                    Om du redan har skapat ett användarkonto, loggar du in här genom att fylla i din
+                    e-postadress och lösenord. Är det första gången du vill fika, trycker du
+                    %link_start%här%link_end%.
+                </target>
+            </trans-unit>
             <trans-unit id="user.form.first_name">
                 <source>user.form.first_name</source>
                 <target>Förnamn:</target>
