--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -834,6 +834,7 @@ Your friends at Kompisbyrån
                         
                         <h3>A special thanks to...</h3>
                         <p>
+                        Alexandra Arvidson
                         Carl Lindström
                         Jessie Moberg
                         Johanna Nordin
