--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -883,7 +883,7 @@ Your friends at Kompisbyrån
                         <p>
                             Cecilia Holmgren, grundare
                             <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a><br>
-                            Clara Wäppling, ambassadör matchning<br>
+                            Clara Wäppling, projektledare<br>
                              Emma Hammar, grundare och verksamhetsledare<a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
                             Gabriella Hernqvist, ambassadör matchning<br>
                             Hanna Magnusson, ambassadör matchning<br>
