--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -779,10 +779,10 @@ Your friends at Kompisbyrån
                     <![CDATA[
                         <h4>نحن كعاملين في كومبيس بيرون</h4>
                         <p>
-                             Emma Hammar, grundare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
                             Cecilia Holmgren, grundare
                             <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a><br>
-                            Clara Wäppling, ambassadör matchning<br>
+                            Clara Wäppling, projektledare<br>
+                             Emma Hammar, grundare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
                             Gabriella Hernqvist, ambassadör matchning<br>
                             Hanna Magnusson, ambassadör matchning<br>
                             Hedda Grew, ambassadör Linköping<br>
@@ -793,7 +793,7 @@ Your friends at Kompisbyrån
                             Jens Östgaard, Kompisledare Göteborg<br>
                             Jon Gotlin, IT<br>
                             Jonas Ouadih, ambassadör Malmö<br>
-                            Louise Koelman, Kompisledare Stockholm<br>
+                            Robert Thörnqvist, Kompisledare Göteborg<br>
                             Sofia Winroth, Kompisledare Örebro
                         </p>
                     ]]>
